@@ -197,6 +197,9 @@ Release 2.7.0 - UNRELEASED
 
     YARN-2984. Metrics for container's actual memory usage. (kasha)
 
+    YARN-2800. Remove MemoryNodeLabelsStore and add a way to enable/disable
+    node labels feature. (Wangda Tan via ozawa)
+
   OPTIMIZATIONS
 
   BUG FIXES
